--- a/index.css
+++ b/index.css
@@ -208,7 +208,10 @@ a{
     flex-wrap: wrap;
 text-align: center;
     justify-content: center;
-
+background-color: black;
+border-radius: 50px;
+color: white;
+padding-bottom: 25px;
 }
 
 .project-item img {
