--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     /* background-color: #181818; */
     color: black;
     background-blend-mode: overlay;
+    background-color: rgb(249, 235, 235);
 
 }
 
@@ -48,6 +49,11 @@ body {
 .sidebar a:hover, .sidebar a.active {
     color: #fff;
 }
+a{
+    text-decoration: none;
+    color: none;
+}
+
 
 .sidebar::before {
     content: '';
@@ -67,7 +73,7 @@ body {
     transform: translateY(-50%);
     width: 10px;
     height: 10px;
-    border: 2px solid gray;
+    border: none;
     background-color: transparent;
     border-radius: 50%;
     transition: background-color 0.3s, border-color 0.3s;
@@ -171,14 +177,16 @@ canvas {
     gap: 25px;
     
 }
+
 a{
     text-decoration: none;
-    color: rgb(50, 22, 208);
+    color: black;
 }
 
 .projects h3 {
     margin-top: 30px;
     color: black;
+    margin: 0 auto;
 }
 
 .projects p {
@@ -199,6 +207,9 @@ a{
     margin-top: 30px;
     text-align: center;
 }
+.projects-section h3{
+    margin-bottom: 15px;
+}
 
 .project-item {
     display: flex;
@@ -208,9 +219,9 @@ a{
     flex-wrap: wrap;
 text-align: center;
     justify-content: center;
-background-color: black;
+
 border-radius: 50px;
-color: white;
+
 padding-bottom: 25px;
 }
 
@@ -228,7 +239,22 @@ padding-bottom: 25px;
 
     
 }
+.project-item:nth-of-type(even){
+    background-color: black;
+    color: white;
+    text-align: justify;
+}
+.project-item:nth-of-type(odd){
+    background-color: white;
 
+    color: black;
+}
+.project-description p:nth-of-type(even){
+    color: white;
+}
+.project-description p:nth-of-type(odd){
+    color: black;
+}
 .project-description {
     flex: 1;
     min-width: 450px;
@@ -245,7 +271,7 @@ padding-bottom: 25px;
 }
 
 .project-description p {
-    color: white;
+    /* color: white; */
     margin-top: 20px;
 }
 .project-title{
@@ -336,17 +362,33 @@ margin-bottom: 15px;
 max-height: 60%;
 margin-top: 30px;
 }
+.project-item{
+    display: block;
+    justify-content: center;
+    align-items: center;
+
+}
 
 .project-item img {
-        margin-bottom: 15px;
-        max-width: 260px;
+    flex: 1;
+    display: block;
+    min-width: auto;
+    min-height: auto;
+    max-width: 300px;
+    max-height: 250px;
+    margin: 0 auto;
+    padding: 20px 0;
+    
+        
         
     }
 .project-description{
 text-align: justify;
-max-width: 300px;
+max-width: 350px;
 font-size: 14px; /* Reduce font size for smaller screens */
 line-height: 1.5;
+min-width: auto;
+margin: 0 auto;
 }
 }
 
@@ -419,4 +461,8 @@ transform: scale(1.2);  /* Slight zoom on hover */
 
 .achievements li:hover{
     text-decoration: underline;
+}
+.achievements {
+    display: inline-block;
+
 }
