--- a/index.css
+++ b/index.css
@@ -107,6 +107,10 @@ a{
     margin-left: 220px;
     padding: 35px;
     transition: margin-left 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 section {
@@ -160,14 +164,17 @@ p {
 
 /* Chart Container */
 .chart-container {
+    height: 100%;
     width: 100%;
     max-width: 1000px;
     margin: 20px auto;
+
 }
 
 canvas {
     width: 100% !important;
     height: 100% !important;
+
 }
 
 /* Projects */
@@ -217,12 +224,12 @@ a{
     /* gap: 10px; */
     margin-bottom: 30px;
     flex-wrap: wrap;
-text-align: center;
+    text-align: center;
     justify-content: center;
 
-border-radius: 50px;
+    /* border-radius: 30px; */
 
-padding-bottom: 25px;
+    padding-bottom: 25px;
 }
 
 .project-item img {
@@ -260,7 +267,8 @@ padding-bottom: 25px;
     min-width: 450px;
     max-width: 600px;
     padding: 0 20px;
-    text-align: left;
+    text-align: justify;
+
 
 
 }
@@ -270,10 +278,7 @@ padding-bottom: 25px;
     color: black;
 }
 
-.project-description p {
-    /* color: white; */
-    margin-top: 20px;
-}
+
 .project-title{
     cursor: pointer;
 
@@ -390,6 +395,13 @@ line-height: 1.5;
 min-width: auto;
 margin: 0 auto;
 }
+
+
+.contact{
+    justify-content: space-between;
+}
+
+
 }
 
 
